Added an absollute example for cc65.

--- a/test_cc65/Makefile
+++ b/test_cc65/Makefile
@@ -3,6 +3,13 @@ OBJS = hello.o hellotext.o
 all:
 	@echo make byhand
 	@echo make cl65
+	@echo make abs
+
+abs:
+	ca65 -t c64 absolute.s
+	ld65 -v -C absolute.cfg absolute.o
+	hd a.out
+	da65 a.out
 
 %.o:	%.s
 	ca65 -t c64 $+
@@ -17,4 +24,4 @@ cl65:
 	cl65 -O -t c64 hello.c hellotext.s
 
 clean:
-	rm -f hello *.o
+	rm -f a.out hello *.o
