An example for sweet16.

--- a/test_cc65/absolute.cfg
+++ b/test_cc65/absolute.cfg
@@ -15,5 +15,5 @@ SEGMENTS {
 	 RODATA: load = HIMEM, type = ro;
 	 DATA: load = HIMEM, type = rw;
 	 BSS: load = HIMEM, type = bss, define = yes;
-	 ZEROPAGE: load = ZEROPAGEMEM, define=yes;
+	 ZEROPAGE: load = ZEROPAGEMEM, type=zp;
 }
