--- a/wavy_gfx/Makefile
+++ b/wavy_gfx/Makefile
@@ -2,8 +2,8 @@
 ##echo $(shell pgrep -f "x64.*-remotemonitor" || x64 -remotemonitor )&
 
 AFLAGS = -DNDEBUG
-#AINC = -I includeCC65
-OBJS = wavy.o startup.o fillcolram.o
+AINC = -I ../includeCC65
+OBJS = wavy.o startup.o fillcolram.o animationfont.o
 
 TARGET = wavy
 
