--- a/wavy_gfx/wavy.cfg
+++ b/wavy_gfx/wavy.cfg
@@ -5,7 +5,7 @@ SYMBOLS {
 MEMORY {
        LOADADDR: file = %O, start = %S-2, size=2;
        LOWMEM: file = %O, start = $0801, size = $07ff, fill = yes, fillval = $52;
-       HIGHMEM: file = %O, start = $1000, size = $C000;
+       HIGHMEM: file = %O, start = $1000, size = $9000;
        ZEROPAGEMEM: file = "", start = $55, size = $1e;
 }
 
