--- a/compression/cruncher/cruncher.cabal
+++ b/compression/cruncher/cruncher.cabal
@@ -62,7 +62,8 @@ executable cruncher
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.9 && <4.10,
                        bytestring >= 0.10,
-                       cmdargs >= 0.10 && < 0.11
+                       cmdargs >= 0.10 && < 0.11,
+                       bits == 0.5.*
   
   -- Directories containing source files.
   hs-source-dirs:      src
