--- a/compression/cruncher/cruncher.cabal
+++ b/compression/cruncher/cruncher.cabal
@@ -35,7 +35,7 @@ author:              Pararaum
 maintainer:          pararaum@gmail.com
 
 -- A copyright notice.
--- copyright:           
+copyright:           © 2020 T7D
 
 -- category:            
 
@@ -60,7 +60,7 @@ executable cruncher
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.9 && <4.10,
+  build-depends:       base >= 4.9 && < 4.10,
                        bytestring >= 0.10,
                        cmdargs >= 0.10 && < 0.11,
                        bits == 0.5.*
@@ -71,3 +71,11 @@ executable cruncher
   -- Base language which the package is written in.
   default-language:    Haskell2010
   
+executable paircruncher
+           main-is:     pairCruncher.hs
+           build-depends:       base >= 4.9,
+                                binary >= 0.8.3,
+                                bytestring >= 0.10,
+                                cmdargs >= 0.10
+           hs-source-dirs:      src
+           default-language:    Haskell2010
