--- a/compression/cruncher/cruncher.cabal
+++ b/compression/cruncher/cruncher.cabal
@@ -73,9 +73,11 @@ executable cruncher
   
 executable paircruncher
            main-is:     pairCruncher.hs
-           build-depends:       base >= 4.9,
+           build-depends:       array >= 0.5,
+                                base >= 4.9,
                                 binary >= 0.8.3,
                                 bytestring >= 0.10,
-                                cmdargs >= 0.10
+                                cmdargs >= 0.10,
+                                pqueue >= 1.3
            hs-source-dirs:      src
            default-language:    Haskell2010
