--- a/compression/cruncher/cruncher.cabal
+++ b/compression/cruncher/cruncher.cabal
@@ -78,6 +78,8 @@ executable paircruncher
                                 binary >= 0.8.3,
                                 bytestring >= 0.10,
                                 cmdargs >= 0.10,
-                                pqueue >= 1.3
+                                pqueue >= 1.3,
+                                bits >= 0.5,
+                                bytes >= 0.17
            hs-source-dirs:      src
            default-language:    Haskell2010
