--- a/compression/cruncher/cruncher.cabal
+++ b/compression/cruncher/cruncher.cabal
@@ -80,6 +80,7 @@ executable paircruncher
                                 cmdargs >= 0.10,
                                 pqueue >= 1.3,
                                 bits >= 0.5,
-                                bytes >= 0.17
+                                bytes >= 0.17,
+                                integer-logarithms >= 1.0
            hs-source-dirs:      src
            default-language:    Haskell2010
