Simple text display tool.

--- a/text_displayer/muzak.cfg
+++ b/text_displayer/muzak.cfg
@@ -2,19 +2,20 @@ FEATURES {
     STARTADDRESS: default = $0801;
 }
 SYMBOLS {
-    __LOADADDR__: type = import;
+#    __LOADADDR__: type = import;
 #    __LOWMEM__: type = import;
 }
 MEMORY {
     ZP:       file = "", start = $0002,  size = $00FE,      define = yes;
     LOADADDR: file = %O, start = %S - 2, size = $0002;
-    LOWMEM:   file = %O, start = %S, size = $1000 - $0801, fill = yes;
-    MAIN:     file = %O, start = $1000,     size = $D000 - %S;
+    LOWMEM:   file = %O, start = %S,     size = $1000 - $0801, fill = yes;
+    MAIN:     file = %O, start = $1000,  size = $D000 - %S;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp,  optional = yes;
     LOADADDR: load = LOADADDR, type = ro;
     EXEHDR:   load = LOWMEM,   type = ro,  optional = yes;
+    MUZAK:    load = MAIN,     type = ro,  optional = yes;
     CODE:     load = MAIN,     type = rw;
     RODATA:   load = MAIN,     type = ro,  optional = yes;
     DATA:     load = MAIN,     type = rw,  optional = yes;
