--- a/text_displayer/muzak.cfg
+++ b/text_displayer/muzak.cfg
@@ -6,7 +6,7 @@ SYMBOLS {
 #    __LOWMEM__: type = import;
 }
 MEMORY {
-    ZP:       file = "", start = $0002,  size = $00FE,      define = yes;
+    ZP:       file = "", start = $0014,  size = $73-$14,      define = yes;
     LOADADDR: file = %O, start = %S - 2, size = $0002;
     LOWMEM:   file = %O, start = %S,     size = $1000 - $0801, fill = yes;
     MAIN:     file = %O, start = $1000,  size = $D000 - %S;
