--- a/mouse/butterflyfly.cfg
+++ b/mouse/butterflyfly.cfg
@@ -11,7 +11,7 @@ MEMORY {
 	LOWMEM: file = %O, start = $1000, size = $3000, fill = yes;
 	GFXMEM: file = %O, start = $4000, size = $4000, fill = yes;
 	HIGHMEM: file = %O, start = $8000, size = $5000;
-	ZEROPAGEMEM: file = "", start = $a7, size = $ab-$a7;
+	ZEROPAGEMEM: file = "", start = $14, size = $73-$14;
 }
 
 SEGMENTS {
