--- a/mouse/Makefile
+++ b/mouse/Makefile
@@ -12,7 +12,7 @@ OBJS = $(TARGET).o startup.o interpreter_moiety.o
 LIBPATH = --lib-path ../library
 LIB = libT7D.lib
 
-all:	$(TARGET) $(TARGET),prg butterflyfly
+all:	$(TARGET) $(TARGET),prg butterflyflight
 
 %.o:	%.s
 	$(AS) $(AINC) $(AFLAGS) $+
@@ -25,18 +25,18 @@ $(TARGET),prg:	$(TARGET)
 $(TARGET):	$(OBJS)
 	$(LD) $(CFLAGS) $(LIBPATH) -v -m $(TARGET).map -Ln $(TARGET).label -C $(TARGET).cfg $+ $(LIB)
 
-butterflyfly:	butterflyfly.o butterflyfly.game.o
-	$(LD) $(CFLAGS) $(LIBPATH) -v -m butterflyfly.map -Ln butterflyfly.label -C butterflyfly.cfg $+ $(LIB)
+butterflyflight:	butterflyflight.o butterflyflight.game.o
+	$(LD) $(CFLAGS) $(LIBPATH) -v -m butterflyflight.map -Ln butterflyflight.label -C butterflyflight.cfg $+ $(LIB)
 
 clean:
 	rm -f *.o
 	rm -f $(TARGET) $(TARGET).map $(TARGET).label $(TARGET),prg
-	rm -f butterflyfly butterflyfly.map butterflyfly.label butterflyfly,prg
+	rm -f butterflyflight butterflyflight.map butterflyflight.label butterflyflight,prg
 
 run:	$(TARGET)
 	x64 -controlport1device 3 -autostartprgmode 1 -keybuf "$(RUNCMD)" $(TARGET)
 
-runbutterflyfly:	butterflyfly
+runbutterflyflight:	butterflyflight
 	x64 -controlport1device 3 -autostartprgmode 1 -keybuf "sys32777\\n" $+
 
-.PHONY:	all clean run runbutterflyfly
+.PHONY:	all clean run runbutterflyflight
