--- a/mouse/butterflyflight.cfg
+++ b/mouse/butterflyflight.cfg
@@ -21,6 +21,7 @@ SEGMENTS {
 	DATA: load = HIGHMEM, type = rw, optional = yes;
 	CODE: load = HIGHMEM, type = rw;
 	MUZAK: load = LOWMEM, type = ro, optional = yes, define = yes;
+	GFX: load = GFXMEM, type = rw, optional = yes, define = yes;
 	BSS: load = LOWMEM, type = bss, optional = yes, define = yes;
 	SCREEN: load = GFXMEM, type = rw, optional = yes, define = yes;
 	ZEROPAGE: load = ZEROPAGEMEM, type=zp;
