Added simple package-build option to makefile.

--- a/compression/XipZ/Makefile
+++ b/compression/XipZ/Makefile
@@ -4,9 +4,36 @@ CXXFLAGS = -DNDEBUG -Wall -O2 -Wextra
 
 #
 OBJS = xipz.o
+#
+PACKAGENAME=xipz
+prefix = $(DESTDIR)/usr/local
+INSTALL=/usr/bin/install
+TMP=/tmp
+exec_prefix = $(prefix)
+datarootdir = $(prefix)/share
+datadir = $(datarootdir)
+bindir = $(exec_prefix)/bin
+docdir = $(datadir)/doc/$(PACKAGENAME)
+mandir = $(datarootdir)/man
 
-.PHONY:	all clean doc
+.PHONY:	all bin clean install pkg
+
 all:	decrunchxipzstub.inc xipz
+
+bin:	xipz
+
+install:	bin doc
+	mkdir -p $(bindir)
+	mkdir -p $(docdir)
+	$(INSTALL) -p -s xipz $(bindir)
+	cp -r README.md html $(docdir)
+
+pkg:	bin doc
+	$(eval PKGTMP := $(shell mktemp -d /tmp/xipz-🖬-XXXXXXX))
+	echo $(PKGTMP)
+	$(INSTALL) -p -s xipz $(PKGTMP)
+	cp -r html $(PKGTMP)
+	tar -C $(PKGTMP) -cjf xipz.tbz html xipz
 
 doc:
 	doxygen
@@ -23,6 +50,10 @@ clean:
 	rm -f decrunchxipzstub decrunchxipzstub.inc
 	rm -f xipz
 	rm -rf html
+
+distclean:
+	$(MAKE) clean
+	rm -f xipz.tbz
 
 xipz:	decrunchxipzstub.inc $(OBJS)
 	g++ $(CXXFLAGS) $(LDFLAGS) -o $@ $(OBJS)
