Compression is qadz.

--- a/compression/XipZ/Makefile
+++ b/compression/XipZ/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS = -DNDEBUG -Wall -O2 -Wextra
 
 VERSION = 0.1.0
 #
-OBJS = xipz.o cmdline.o xipz.qadc.o
+OBJS = xipz.o cmdline.o qadz.o
 #
 PACKAGENAME=xipz
 prefix = $(DESTDIR)/usr/local
