Flexibilisation of player.
Initial library functions.
Use new copy function.
Removed unused include.

--- a/sid/Makefile
+++ b/sid/Makefile
@@ -7,8 +7,9 @@ CFLAGS=-C memmap.cfg
 LDFLAGS=-C memmap.cfg -L../library
 ASFLAGS=-I../library -I../includeCC65
 
-TARGETS=julia.prg bananas-01.prg
-OBJS=main.o
+TARGETS=julia.prg bananas-01.prg song.prg
+LIBOBJS=$(addsuffix .o, $(basename $(wildcard lib/*.s)))
+OBJS=main.o $(LIBOBJS)
 
 ifdef DEBUG
 ASFLAGS += -DDEBUG
@@ -18,15 +19,21 @@ endif
 all:	bin
 
 clean:
-	rm -f $(TARGET) *.bin *.o *.prg *.map *.labels a.out
+	rm -f $(TARGET) *.bin *.o lib/*.o *.prg *.map *.labels *.lib a.out
 
-bin:	main.o $(TARGETS)
+sidplay.lib:	$(LIBOBJS)
+	ar65 r $@ $^
 
-julia.bin:	main.o default_screen_simple.o julia.o
+bin:	$(OBJS) sidplay.lib $(TARGETS)
+
+julia.bin:	main.o default_screen_simple.o sidplay.lib julia.o
 	$(LD) $(LDFLAGS) -m $@.map -Ln $@.labels -o $@ $+ libT7D.lib
 	@sed '/^Segment list/,/^$$/p' -n $@.map
 
-bananas-01.bin:	main.o default_screen_simple.o bananas-01.o
+bananas-01.bin:	main.o default_screen_simple.o sidplay.lib bananas-01.o
+	$(LD) $(LDFLAGS) -m $@.map -Ln $@.labels -o $@ $+ libT7D.lib
+
+song.bin:	mainraw.o default_screen_simple.o sidplay.lib song.o
 	$(LD) $(LDFLAGS) -m $@.map -Ln $@.labels -o $@ $+ libT7D.lib
 
 run:	$(TARGETS)
