fix animated characters

--- a/anichar/Makefile
+++ b/anichar/Makefile
@@ -7,7 +7,7 @@ RUNCMD = "sys$(EXECADDR)\\n"
 AS = ca65
 LD = cl65
 AFLAGS = -DNDEBUG
-AINC = -I ../includeCC65 -I ../library
+AINC = -I ../library
 OBJS = $(TARGET).o startup.o irqmoiety.o muzakmoiety.o animate_char.o
 LIBPATH = --lib-path ../library
 LIB = libT7D.lib
