--- a/showcases_library/takeover_default.cfg
+++ b/showcases_library/takeover_default.cfg
@@ -6,9 +6,9 @@ SYMBOLS {
 MEMORY {
     ZP:       file = "", start = $0002,  size = $0050, define = yes;
     LOADADDR: file = %O, start = %S - 2, size = $0002;
-    SCREEN0:  file = "", start = $400,   size = 1000, define = yes;
     ONCE:     file = %O, start = $801,   size = $800-1, fill = yes, define = yes;
-    MAIN:     file = %O, start = $1000,  size = $9000-$1000, define = yes;
+    MAIN:     file = %O, start = $1000,  size = $A000-$1000, define = yes;
+    SCREEN0:  file = "", start = $400,   size = 1000, define = yes;
     FONT0:    file = "", start = $0800,  size = $0800, define = yes;
 }
 SEGMENTS {
