add Full Screen Verstical Scroller

--- a/showcases_library/Makefile
+++ b/showcases_library/Makefile
@@ -1,13 +1,14 @@
 #! /usr/bin/make -f
 
-AS=ca65
+AS=ca65 -t c64
 LD=ld65
-CC=cl65
-CFLAGS=
+CC=cl65 -t c64
+CFLAGS=-Os -I../library/include
 LDFLAGS=-L../library
-ASFLAGS=-I../library -I../includeCC65
+ASFLAGS=-I../library
 
 TARGETS=takeover_bulleteffect.prg takeover_dissolve_left2right.prg takeover_curtain_left2right.prg
+TARGETS+=fsvscroll.skeleton_using_c.prg fsvscroll.skeleton_using_asm.prg
 
 ifdef DEBUG
 ASFLAGS += -DDEBUG
@@ -21,6 +22,11 @@ clean:
 	rm -f *.o *.labels *.map
 	rm -f $(TARGETS)
 
-%.prg: %.o
+takeover_%.prg: takeover_%.o
 	$(LD) $(LDFLAGS) -C takeover_default.cfg -m $@.map -Ln $@.labels -o $@ $+ libT7D.lib
 
+fsvscroll.skeleton_using_c.prg:	fsvscroll.skeleton_using_c.o fsvscroll.example_frame.o lowcode_music.1000.o
+	cl65 -t c64 -o $@ -Ln $@.labels $(CFLAGS) $(LDFLAGS) --asm-include-dir ../library -C fsvscroll.memorymap.cfg $^ libT7D.lib
+
+fsvscroll.skeleton_using_asm.prg: fsvscroll.skeleton_using_asm.o fsvscroll.example_frame.o lowcode_music.1000.o
+	cl65 -t c64 -o $@ -Ln $@.labels $(CFLAGS) $(LDFLAGS) --asm-include-dir ../library -C fsvscroll.memorymap.cfg $^ libT7D.lib
