--- a/brainfuck64/Makefile
+++ b/brainfuck64/Makefile
@@ -1,35 +1,57 @@
 #! /usr/bin/make -f
 
+CC=cl65 -t c64
+CFLAGS=-O -I $(LIBDIR)/include $(CDEBUG)
 AS=ca65
-ASFLAGS=-t c64
-LIBS = --lib c64.lib llamalib.lib
-LD=cl65
-LDFLAGS=-C c64-basicfriendly-asm.cfg -u __EXEHDR__
+ASFLAGS=-t c64 -I $(LIBDIR) -I $(LIBDIR) $(ASDEBUG)
+LD=ld65
+LDFLAGS=-L $(LIBDIR)
+AR=ar65
+LIBDIR=../library
+X64=x64
+X64FLAGS=+truedrive -device8 1 -fs8 . -autostartprgmode 1
+CRUNCHER=pucrunch
+CRUNCHERFLAGS=
 
-SOURCES=$(wildcard *.s)
-OBJS=$(SOURCES:.s=.o)
-TARGETS=$(OBJS:.o=.prg)
+BFLIB = libbrainfuck/brainfuck.lib
 
-BFFILES=$(wildcard *.bf.prg)
+.PHONY:	all disk test run clean debug presentation
 
-.PHONY:	all clean
+all:	libbrainfuck/brainfuck.lib brainfuck64.prg disk
 
-all:: lamabrainfuck.d64 
-#$(TARGETS)
+disk:	brainfuck64.prg *.bf
+	cp logo.d64 brainfuck64.d64
+	cc1541 -n brainfuck -i " vcc " $(foreach I,$+,-w $(I)) brainfuck64.d64
 
-clean::
-	rm -f *.o
-	rm -f $(TARGETS)
-	rm -f *.labels
+prg:	$(PROJECT).prg
+	$(CRUNCHER) $(CRUNCHERFLAGS) $(PROJECT) $(PROJECT).prg
 
-%.prg: %.o 
-	$(LD) -Ln $(basename $@).labels $(LDFLAGS) -o $@ $+ LAMAlib.lib
+test:
 
-lamabrainfuck.d64: lamabrainfuck.prg
-	cp lamabrainfuck_template.d64 lamabrainfuck.d64
-	c1541 -attach $@ -write $<
+debug:
+	$(MAKE)	ASDEBUG="-DDEBUG" CDEBUG="-DDEBUG"
 
-run: lamabrainfuck.d64
-	x64 lamabrainfuck.d64:
+run:	brainfuck64.prg
+	$(X64) $(X64FLAGS) -autostart $+
 
-#		$(call c1541 -attach $@ -write ${bff} ),\
+$(BFLIB):
+	make -C libbrainfuck
+
+clean:
+	make -C libbrainfuck clean
+	rm -f brainfuck64.prg basicfuck.prg *.o *.map *.labels
+	rm -f *.raw
+	rm -f brainfuck64.d64
+	rm -f presentation.html
+
+distclean:	clean
+	rm -f *~
+
+brainfuck64.raw: basicfuck.o isr_showmem.o irq-catcher.o $(BFLIB)
+	$(LD) -C basicmap.cfg -m $@.map -Ln $@.labels $(LDFLAGS) -o $@ $+ libT7D.lib LAMAlib.lib
+
+%.prg:	%.raw
+	$(CRUNCHER) $(CRUNCHERFLAGS) -x0x7800 $+ $@
+
+presentation:
+	darkslide presentation.md
