add two more cat-ninja releases

--- a/gfx_n_mzk/Makefile
+++ b/gfx_n_mzk/Makefile
@@ -1,6 +1,6 @@
 #! /usr/bin/make -f
 
-TARGETS = secret_ninja_christmas display_multicolour_image display_image
+TARGETS = cute_cat_ninja cat-ninja secret_ninja_christmas display_multicolour_image display_image
 
 .PHONY:	all clean
 all:	$(TARGETS)
@@ -16,5 +16,12 @@ display_image: display_image.s
 
 secret_ninja_christmas: secret_ninja_christmas.s
 	cl65 -m /dev/stdout -C secret_ninja_christmas.cfg $+ libT7D.lib
-	#pucrunch -x0x900 $@ $@.prg
 	xipz -j 0x900 -a qadz $@
+
+cat-ninja: cat-ninja.s
+	cl65 -m /dev/stdout -C secret_ninja_christmas.cfg $+ libT7D.lib
+	pucrunch -x0x900 $@ $@.prg
+
+cute_cat_ninja: cute_cat_ninja.s
+	cl65 -m /dev/stdout -C secret_ninja_christmas.cfg $+ libT7D.lib
+	pucrunch -x0x900 $@ $@.prg
