--- a/showcases_library/Makefile
+++ b/showcases_library/Makefile
@@ -3,13 +3,17 @@
 AS=ca65 -t c64
 LD=ld65
 CC=cl65 -t c64
-CFLAGS=-Os -I../library/include
-LDFLAGS=-L../library
-ASFLAGS=-I../library
+LIBT7DDIR ?= ../library
+CLFLAGS=--asm-include-dir $(LIBT7DDIR)
+CFLAGS=-Os -I$(LIBT7DDIR)/include
+LDFLAGS=-L$(LIBT7DDIR)
+ASFLAGS=-I$(LIBT7DDIR)
+LIBT7D ?= $(LIBT7DDIR)/libT7D.lib
 
 TARGETS =  takeover_bulleteffect.prg takeover_dissolve_left2right.prg takeover_curtain_left2right.prg
 TARGETS += fsvscroll.skeleton_using_c.prg fsvscroll.skeleton_using_asm.prg
 TARGETS += memory_copy_routine.prg
+TARGETS += spritecanvas3X4.prg
 
 ifdef DEBUG
 ASFLAGS += -DDEBUG
@@ -23,6 +27,7 @@ clean:
 	rm -f *.o *.labels *.map
 	rm -f $(TARGETS)
 	rm -f memory_copy_routine
+	rm -f spritecanvas3X4
 
 takeover_%.prg: takeover_%.o
 	$(LD) $(LDFLAGS) -C takeover_default.cfg -m $@.map -Ln $@.labels -o $@ $+ libT7D.lib
@@ -34,6 +39,9 @@ fsvscroll.skeleton_using_asm.prg: fsvscroll.skeleton_using_asm.o fsvscroll.examp
 	cl65 -t c64 -o $@ -Ln $@.labels $(CFLAGS) $(LDFLAGS) --asm-include-dir ../library -C fsvscroll.memorymap.cfg $^ libT7D.lib
 
 memory_copy_routine.prg: memory_copy_routine.s
-	cl65 --asm-include-dir ../library -t c64 $^ ../library/libT7D.lib
+	cl65 $(CLFLAGS) -t c64 $^ ../library/libT7D.lib
 	xipz -a qadz -j 2061 -p 0x90 memory_copy_routine
 
+spritecanvas3X4.prg:	spritecanvas3X4.s
+	cl65 $(CLFLAGS) $^ $(LIBT7D)
+	xipz -a qadz -j 2061 -p 0x90 spritecanvas3X4
