--- a/compression/XipZ/Makefile
+++ b/compression/XipZ/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS = -DNDEBUG -Wall -O2 -Wextra
 
 VERSION = 0.5.1
 #
-OBJS = xipz.o cmdline.o qadz.o
+OBJS = cmdline.o qadz.o xipz.o
 #
 PACKAGENAME=xipz
 prefix = $(DESTDIR)/usr/local
