add missing option

--- a/tools/prepender64/Makefile
+++ b/tools/prepender64/Makefile
@@ -50,9 +50,9 @@ cmdline.c: command_line.ggo
 	cat $@.label | awk '/stub/ { sub(/^./, "STUB$(shell echo $<| sed 's/stub-\([a-zA-Z0-9]\+\).*/\1/'|tr [a-z] [A-Z])", $$3); printf("#define %s 0x%s\n", $$3, $$2);}' | tee -a $@
 
 %.inc:	%.asm
-	64tass -o $(basename $<) --vice-labels -l $@.label -L $@.lst $<
+	64tass -o $(basename $<) --vice-labels-numeric -l $@.label -L $@.lst $<
 	xxd -i $(basename $<) | tee $@
-	cat $@.label | awk '/stub/ { sub(/^./, "STUB$(shell echo $<| sed 's/stub-\([a-zA-Z0-9]\+\).*/\1/'|tr [a-z] [A-Z])", $$3); printf("#define %s 0x%s\n", $$3, $$2);}' | tee -a $@
+	cat $@.label | awk '/stub.*offset/ { sub(/^./, "STUB$(shell echo $<| sed 's/stub-\([a-zA-Z0-9]\+\).*/\1/'|tr [a-z] [A-Z])", $$3); printf("#define %s 0x%s\n", $$3, $$2);}' | tee -a $@
 
 clean:
 	rm -f $(basename $(wildcard *.inc))
