--- a/tools/prepender64/Makefile
+++ b/tools/prepender64/Makefile
@@ -2,7 +2,7 @@
 
 CXXFLAGS = -std=c++20 -DNDEBUG -Wall -O2 -Wextra
 
-VERSION = 0.1.0
+VERSION = 0.2.0
 #
 OBJS = cmdline.o prepender64.o
 #
@@ -44,7 +44,7 @@ doc:
 cmdline.c: prepender64.ggo
 	gengetopt -i $+
 
-%.prg:	vcclogo.petscii.c
+%.prg:	%.petscii.c
 	petscii2x.py -f LISTSYS -o $@ $^
 
 %.inc:	%.s
@@ -68,7 +68,7 @@ distclean:
 	$(MAKE) clean
 	rm -f cmdline.*
 
-$(TARGET).o: stub-vcclogo.inc stub-autostart326.inc stub-scrambler16.inc stub-copyeor.inc stub-copyeorstack.inc stub-donotspread.inc cmdline.o $(TARGET).cc
+$(TARGET).o: stub-t7dlogo.inc stub-vcclogo.inc stub-autostart326.inc stub-scrambler16.inc stub-copyeor.inc stub-copyeorstack.inc stub-donotspread.inc cmdline.o $(TARGET).cc
 
 $(TARGET): $(OBJS)
 	g++ $(CXXFLAGS) $(LDFLAGS) -o $@ $(filter %.o, $^)
